# split-stream-by

./: Cargo.toml  README.md  rustfmt.toml
examples/: split_map.rs
src/: lib.rs  partition.rs  partition_map.rs  ring_buf.rs  split_by.rs  split_by_buffered.rs  split_by_map.rs  split_by_map_buffered.rs
