[package]
name = "split-stream-by"
description = "Stream extension crate for splitting a Stream into two per a predicate"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
license = "MIT"
repository = "https://github.com/drewkett/split-stream-by"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pin-project = "1"
pin-project-lite = "0.2"
